Upgrade to latest Minecraft version 1.21.11