@@ -15,28 +15,39 @@ import me.shedaniel.rei.api.client.registry.display.DisplayCategory;
 import me.shedaniel.rei.api.client.registry.display.DisplayRegistry;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.display.basic.BasicDisplay;
+import me.shedaniel.rei.api.common.display.DisplaySerializer;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryStacks;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.core.RegistryAccess;
+import net.minecraft.client.multiplayer.ClientLevel;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
 import net.minecraft.util.FormattedCharSequence;
-import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.crafting.RecipeAccess;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import com.mojang.serialization.MapCodec;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 
 public class ReiPotRecipeCategory implements DisplayCategory<ReiPotRecipeCategory.PotRecipeDisplay> {
     public static final CategoryIdentifier<PotRecipeDisplay> ID = CategoryIdentifier.of(KaleidoscopeCookery.MOD_ID, "plugin/pot");
-    private static final ResourceLocation BG = new ResourceLocation(KaleidoscopeCookery.MOD_ID, "textures/gui/jei/pot.png");
+    private static final Identifier BG = Identifier.fromNamespaceAndPath(KaleidoscopeCookery.MOD_ID, "textures/gui/jei/pot.png");
     private static final MutableComponent TITLE = Component.translatable("block.kaleidoscope_cookery.pot");
     public static final int WIDTH = 176;
     public static final int HEIGHT = 102;
+    private static final Comparator<RecipeHolder<com.github.ysbbbbbb.kaleidoscopecookery.crafting.recipe.PotRecipe>> RECIPE_ORDER =
+            Comparator.comparing((RecipeHolder<com.github.ysbbbbbb.kaleidoscopecookery.crafting.recipe.PotRecipe> holder) ->
+                            BuiltInRegistries.ITEM.getKey(holder.value().result().getItem()).toString())
+                    .thenComparingInt(holder -> holder.value().result().getCount())
+                    .thenComparing(holder -> holder.id().identifier().toString());
 
     @Override
     public CategoryIdentifier<PotRecipeDisplay> getCategoryIdentifier() {
@@ -54,16 +65,16 @@ public class ReiPotRecipeCategory implements DisplayCategory<ReiPotRecipeCategor
         widgets.add(Widgets.createTexturedWidget(BG, startX, startY, 0, 0, WIDTH, HEIGHT));
         widgets.add(Widgets.withTranslate(Widgets.createDrawableWidget((guiGraphics, mouseX, mouseY, v) -> {
             drawCenteredString(guiGraphics, stirFryCount, WIDTH / 2, 85);
-        }), startX, startY, 0));
+        }), startX, startY));
 
         List<EntryIngredient> inputs = display.getInputEntries();
         for (int i = 0; i < inputs.size(); i++) {
             int xOffset = (i % 3) * 18 + 15;
             int yOffset = (i / 3) * 18 + 24;
             widgets.add(Widgets.createSlot(new Point(startX + xOffset, startY + yOffset))
-                .entries(inputs.get(i))
-                .disableBackground()
-                .markInput());
+                    .entries(inputs.get(i))
+                    .disableBackground()
+                    .markInput());
         }
         if (!display.carrier.isEmpty()) {
             widgets.add(Widgets.createSlot(new Point(startX + 133, startY + 18))
@@ -72,7 +83,7 @@ public class ReiPotRecipeCategory implements DisplayCategory<ReiPotRecipeCategor
                     .markInput());
         }
         widgets.add(Widgets.createSlot(new Point(startX + 143, startY + 60))
-                .entries(display.getOutputEntries().get(0))
+                .entries(display.getOutputEntries().getFirst())
                 .disableBackground()
                 .markOutput());
 
@@ -102,34 +113,48 @@ public class ReiPotRecipeCategory implements DisplayCategory<ReiPotRecipeCategor
 
     @Override
     public Renderer getIcon() {
-        return EntryStacks.of(ModItems.POT.get());
+        return EntryStacks.of(ModItems.POT);
     }
 
     public static void registerCategories(CategoryRegistry registry) {
         registry.add(new ReiPotRecipeCategory());
         registry.addWorkstations(ReiPotRecipeCategory.ID,
-                ReiUtil.ofItem(ModItems.POT.get()),
-                ReiUtil.ofIngredient(Ingredient.of(TagMod.KITCHEN_SHOVEL)),
-                ReiUtil.ofItem(ModItems.OIL.get())
+                ReiUtil.ofItem(ModItems.POT),
+                ReiUtil.ofTag(TagMod.KITCHEN_SHOVEL),
+                ReiUtil.ofItem(ModItems.OIL)
         );
     }
 
     public static void registerDisplays(DisplayRegistry registry) {
-        registry.getRecipeManager().getAllRecipesFor(ModRecipes.POT_RECIPE)
-                .forEach(r -> {
-                    List<EntryIngredient> inputs = ReiUtil.ofIngredients(r.getIngredients());
-                    List<EntryIngredient> output = ReiUtil.ofItemStacks(r.getResultItem(RegistryAccess.EMPTY));
-                    EntryIngredient carrier = r.carrier().isEmpty() ? EntryIngredient.empty() : ReiUtil.ofIngredient(r.carrier());
+        ClientLevel level = Minecraft.getInstance().level;
+        if (level == null) {
+            return;
+        }
+        RecipeAccess recipeAccess = level.recipeAccess();
+        List<RecipeHolder<com.github.ysbbbbbb.kaleidoscopecookery.crafting.recipe.PotRecipe>> list = new ArrayList<>();
+        for (RecipeHolder<?> holder : recipeAccess.getSynchronizedRecipes().recipes()) {
+            if (holder.value().getType() != ModRecipes.POT_RECIPE) {
+                continue;
+            }
+            list.add((RecipeHolder<com.github.ysbbbbbb.kaleidoscopecookery.crafting.recipe.PotRecipe>) holder);
+        }
+        list.sort(RECIPE_ORDER);
+        for (RecipeHolder<com.github.ysbbbbbb.kaleidoscopecookery.crafting.recipe.PotRecipe> r : list) {
+            List<EntryIngredient> inputs = ReiUtil.ofIngredients(r.value().getIngredients());
+            List<EntryIngredient> output = ReiUtil.ofItemStacks(r.value().result());
+            EntryIngredient carrier = r.value().carrier()
+                    .map(ReiUtil::ofIngredient)
+                    .orElse(EntryIngredient.empty());
 
-                    registry.add(new PotRecipeDisplay(r.getId(), inputs, output, carrier, r.stirFryCount()));
-                });
+            registry.add(new PotRecipeDisplay(r.id().identifier(), inputs, output, carrier, r.value().stirFryCount()));
+        }
     }
 
     public static class PotRecipeDisplay extends BasicDisplay {
         public final EntryIngredient carrier;
         public final int stirFryCount;
 
-        public PotRecipeDisplay(ResourceLocation location, List<EntryIngredient> inputs, List<EntryIngredient> outputs, EntryIngredient carrier, int stirFryCount) {
+        public PotRecipeDisplay(Identifier location, List<EntryIngredient> inputs, List<EntryIngredient> outputs, EntryIngredient carrier, int stirFryCount) {
             super(inputs, outputs, Optional.of(location));
             this.carrier = carrier;
             this.stirFryCount = stirFryCount;
@@ -138,6 +163,11 @@ public class ReiPotRecipeCategory implements DisplayCategory<ReiPotRecipeCategor
         @Override
         public CategoryIdentifier<?> getCategoryIdentifier() {
             return ID;
+        }
+
+        @Override
+        public DisplaySerializer<? extends PotRecipeDisplay> getSerializer() {
+            return DisplaySerializer.of(MapCodec.unit(this), StreamCodec.unit(this));
         }
     }
 }
